--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,8 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, Times;
-$base-font-size:   16px;
+$base-font-family: Helvetica, Times, Arial;
+$base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
