--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,21 @@
 ---
-layout: default
+layout: bootstrap
 ---
 <div class="post">
 
-  <header class="post-header">
+  <!-- <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+  </header> -->
 
   <article class="post-content">
-    {{ content }}
+  	<div class="container-fluid">
+  		<div class="row">
+    		<div class="col-lg-6 col-lg-offset-3">
+      		{{content}}
+    		</div>
+  	</div>
+
   </article>
 
 </div>
