Almost at 0.1 of the handbook.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" class="font-family: serif"><strong>PRAEKELT</strong></a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/" class="font-family: serif"><strong>PRAEKELT</strong></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
