--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -6,10 +6,14 @@
   <body>
 
     {% include header.html %}
-
+    
       {{content}}
 
+    {% include nav.html %}
+
     {% include footer.html %}
+
+	<pre>{{page}}</pre>
 
   </body>
 
