--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <!-- nav include start -->
+{% if page.name != "index.md" %}
 <div class="container">
     <div class="row">
-
+        
         <hr>
         <ul class="pager">
             
@@ -20,4 +21,5 @@
         </ul>
 
   </div>
+  {% endif %}
   <!-- nav include end -->
