--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
       <ul class="nav navbar-nav navbar-right">
         
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chapters <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
           <ul class="dropdown-menu">
                 {% for post in site.posts %}
                 <li><a href="/handbook/{{post.url}}">{{post.title}}</a></li>
