changed the design

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -93,6 +93,7 @@
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
+    
     padding: $spacing-unit 0;
 }
 
@@ -179,7 +180,7 @@
 }
 
 .post-meta {
-    font-size: $small-font-size;
+    font-size: $base-font-size;
     color: $grey-color;
 }
 
