--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{ site.baseurl }}/" class="font-family: serif"><strong>PRAEKELT</strong></a>
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,16 +21,15 @@
       <ul class="nav navbar-nav navbar-right">
         
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Handbook <span class="caret"></span></a>
           <ul class="dropdown-menu">
                 {% for post in site.posts %}
                 <li><a href="/handbook/{{post.url}}">{{post.title}}</a></li>
                 {% endfor %}
-                
-
           </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
+    <hr>
   </div><!-- /.container-fluid -->
 </nav>
