--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -6,8 +6,10 @@
   <body>
 
     {% include header.html %}
-    
+
+    <div class="container">
       {{content}}
+    </div>
 
     {% include nav.html %}
 
